dark mode fixes

--- a/src/scss/layout/_core.scss
+++ b/src/scss/layout/_core.scss
@@ -60,6 +60,7 @@ body {
     margin: 0 auto;
     max-width: var(--#{$variable-prefix}theme-boxed-width);
     border-radius: var(--#{$variable-prefix}theme-boxed-border-radius);
+    color: $body-color;
 
     @include media-breakpoint-up(md) {
       border: 1px solid var(--tblr-border-color);
